错了个引用
错了个引用

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 *.xcuserstate
+
+ACVideoRecorderDemo/ACVideoRecorderDemo.xcodeproj/project.xcworkspace/xcuserdata/Allen.xcuserdatad/UserInterfaceState.xcuserstate
